Bugfix: update e621's scaling settings alongside the script config
This should prevent the image from jumping around too much

--- a/src/scss/modules/_image-scaler.scss
+++ b/src/scss/modules/_image-scaler.scss
@@ -37,6 +37,10 @@ section#image-container {
 
 }
 
+div#image-resize-notice {
+    display: none;
+}
+
 @keyframes loading-rotation {
     from {
         transform: rotate(0deg);
